# BilingoType

./: .env.example  .gitignore  Bilingo_app_original_discussion.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SECURITY_AUDIT.md  electron-builder.json  main.js  package-lock.json  package.json  preload.js
.claude/: settings.json
docs/: FORK_PLAN.md  PRD.md
resources/: windows-fast-paste.c
resources/nsis/: cleanup-models.nsh
scripts/: download-windows-fast-paste.js  download-windows-key-listener.js
scripts/lib/: download-utils.js
src/: App.jsx  index.css  index.html  main.jsx  utils.js  vite.config.mjs
src/assets/: README.md
src/components/: ControlPanel.tsx  ControlPanelSidebar.tsx  DictionaryView.tsx  HistoryView.tsx  LocalWhisperPicker.tsx  SettingsModal.tsx  SettingsPage.tsx  TranscriptionModelPicker.tsx
src/config/: constants.ts  languageRegistry.json  prompts.ts
src/helpers/: audioManager.js  clipboard.js  debugLogger.js  downloadUtils.js  environment.js  fasterWhisperManager.js  hotkeyManager.js  ipcHandlers.js  menuManager.js  modelDirUtils.js  safeTempDir.js  whisper.js  whisperCudaManager.js  whisperServer.js  windowConfig.js  windowManager.js
src/hooks/: useActionProcessing.ts  useAudioRecording.js  useLocalStorage.ts  useModelDownload.ts  useNotesOnboarding.ts  useSettings.ts
src/models/: localModelData.ts
src/stores/: settingsStore.ts
src/types/: electron.ts
src/utils/: agentName.ts  providerIcons.ts  (+3 more)
stt/: pyproject.toml
stt/src/bilingotype_stt/: __init__.py  __main__.py  engine.py  hf_client.py  punctuation.py  server.py  vad.py
(+15 files in other folders)
