[project]
name = "bilingotype-stt"
version = "0.1.0"
description = "faster-whisper STT sidecar for BilingoType"
requires-python = ">=3.12,<3.14"
dependencies = [
    "faster-whisper>=1.1.0",
    "websockets>=14.0",
    "numpy>=1.26",
    "silero-vad>=5.1",
]

[project.optional-dependencies]
cuda = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
